fix: Fix missing color in terminal theme

--- a/themes/terminal/0.1.0/styles.css
+++ b/themes/terminal/0.1.0/styles.css
@@ -41,6 +41,7 @@
 .rcb-chat-input::before {
     content: "react-chatbotify ~ % \00a0";
     font-size: 14px;
+    color: "#fff";
 }
 
 .rcb-chat-input-textarea::placeholder {
